# Machine-Learning-Trading-Specialization

./: README.md
1_Introduction_Trading_ML_GCP/: README.md
A_Practical_Guide_to_Quantitative/: README.md
Computational_Finance /: README.md
Cpp_Finances/: README.md
Ecomonics/: README.md
Financial_Engineering/: README.md
GCP_AI_Infrastructure/: README.md
ML_Trading_Specialization/: README.md
Mathematics_App_in_Finance/: README.md
Mathematics_for_ML/: README.md
Python_Finances/: EstrategiasTradingPython.md  PythonQuantAlgorithmicTrading.md  Readme.md
Python_Finances/Demos/: README.md  main.py  main_binances_connetor.py  pyproject.toml
Python_Finances/Demos/Utils/: strategy.py
Python_Trading/: Contenido.md  Notes.md  README.md
Quant_trader_python/: README.md
Stanford_Courses_AI_ML/: README.md
The_Math_of_Intelligence/: README.md
Trading_Systems_Developer/: README.md
