[project]
name = "demos"
version = "0.1.0"
description = "Estrategias de Trading con Python"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "python-binance>=1.0.29",
    "python-dotenv>=1.1.0",
    "ta-lib>=0.6.4",
    "yfinance>=0.2.62",
]
